test/src/e2e_vm_tests/test_programs/should_pass/language/typeinfo_custom_callpath_with_import/src/foo.sw
library;

pub enum Foo {
  A: (),
  B: (),
}
